<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_marginVertical="6dp"
    android:background="#FFFFFF">

    <!-- Avatar -->
    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/sym_def_app_icon"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- ===== CỘT TRÁI ===== -->

    <TextView
        android:id="@+id/tvStudentName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_student_name"
        android:textSize="13sp"
        android:textColor="#444"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintTop_toTopOf="@id/imgAvatar"
        app:layout_constraintEnd_toStartOf="@id/tvStudentGender"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/tvStudentMSSV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_student_mssv"
        android:textSize="13sp"
        android:textColor="#444"
        app:layout_constraintStart_toStartOf="@id/tvStudentName"
        app:layout_constraintTop_toBottomOf="@id/tvStudentName"
        app:layout_constraintEnd_toEndOf="@id/tvStudentName"/>

    <TextView
        android:id="@+id/tvStudentAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_student_address"
        android:textSize="13sp"
        android:textColor="#444"
        app:layout_constraintStart_toStartOf="@id/tvStudentName"
        app:layout_constraintTop_toBottomOf="@id/tvStudentMSSV"
        app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
        app:layout_constraintEnd_toEndOf="@id/tvStudentName"/>

    <!-- ===== CỘT PHẢI ===== -->

    <TextView
        android:id="@+id/tvStudentGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_student_gender"
        android:textSize="13sp"
        android:textColor="#444"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@id/tvStudentName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvStudentName"/>

    <TextView
        android:id="@+id/tvStudentBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_student_birthday"
        android:textSize="13sp"
        android:textColor="#444"
        app:layout_constraintStart_toStartOf="@id/tvStudentGender"
        app:layout_constraintEnd_toEndOf="@id/tvStudentGender"
        app:layout_constraintTop_toBottomOf="@id/tvStudentGender"/>

    <TextView
        android:id="@+id/tvStudentPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_student_phone"
        android:textSize="13sp"
        android:textColor="#444"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/tvStudentGender"
        app:layout_constraintEnd_toEndOf="@id/tvStudentGender"
        app:layout_constraintTop_toBottomOf="@id/tvStudentBirthday"
        app:layout_constraintBottom_toBottomOf="@id/tvStudentAddress"/>

</androidx.constraintlayout.widget.ConstraintLayout>
