<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemRoom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_marginBottom="4dp"
    android:background="#FFFFFF"
    android:elevation="2dp">

    <TextView
        android:id="@+id/tvRoomId"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/label_room_id"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvRoomName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_room_name"
        android:textStyle="bold"
        android:paddingStart="8dp"
        app:layout_constraintStart_toEndOf="@id/tvRoomId"
        app:layout_constraintEnd_toStartOf="@id/tvRoomType"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvRoomType"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/label_room_type"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
